cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 20 CACHE STRING "")
set(CMAKE_CXX_STANDARD_REQUIRED TRUE CACHE BOOL "")

function(aoc_day num)
    list(LENGTH ARGN max)
    math(EXPR max "${max} - 1")
    foreach(idx RANGE 0 "${max}")
        list(GET ARGN "${idx}" fname)
        list(APPEND ACTUAL_SOURCES "day${num}/${fname}")
    endforeach()
    add_executable("day${num}" ${ACTUAL_SOURCES})
    target_link_libraries("day${num}" fmt glm aoc_common)
    target_link_options("day${num}" PUBLIC "$<IF:$<CONFIG:DEBUG>,-fsanitize=address;-fsanitize=undefined,>")
    target_compile_definitions("day${num}" PUBLIC "$<IF:$<CONFIG:DEBUG>,DEBUG=1;_GLIBCXX_DEBUG,DEBUG=0>")
    target_compile_options("day${num}" PUBLIC "$<IF:$<CONFIG:DEBUG>,-fsanitize=address;-fsanitize=undefined,>")
endfunction()

project("AoC2021" VERSION 1.0 DESCRIPTION "Advent of Code 2021" LANGUAGES CXX C)

add_subdirectory(libs/fmt)

set(GLM_FORCE_RADIANS OFF CACHE BOOL "" FORCE)
set(GLM_GTX_integer ON CACHE BOOL "" FORCE)
set(GLM_GTX_rotate_vector ON CACHE BOOL "" FORCE)
add_subdirectory(libs/glm)

add_library("aoc_common" INTERFACE)
target_include_directories("aoc_common" INTERFACE "common/")
target_link_libraries("aoc_common" INTERFACE fmt glm)

aoc_day(1 "main.cpp")
aoc_day(2 "main.cpp")
aoc_day(3 "main.cpp")
aoc_day(4 "main.cpp")
aoc_day(5 "main.cpp")
aoc_day(6 "main.cpp")
aoc_day(7 "main.cpp")
aoc_day(8 "main.cpp")
aoc_day(9 "main.cpp")
aoc_day(10 "main.cpp")
aoc_day(11 "main.cpp")
aoc_day(12 "main.cpp")
aoc_day(13 "main.cpp")
aoc_day(14 "main.cpp")
aoc_day(15 "main.cpp")
aoc_day(16 "main.cpp")
aoc_day(17 "main.cpp")
aoc_day(18 "main.cpp")
aoc_day(19 "main.cpp")
aoc_day(20 "main.cpp")
aoc_day(21 "main.cpp")
aoc_day(22 "main.cpp")
aoc_day(23 "main.cpp")
aoc_day(24 "main.cpp")
aoc_day(25 "main.cpp")
